# yolo-v4l2-onnx-dashboard

./: Cargo.toml  MIT License.md  README.md
src/: main.rs
src/adapters/: mod.rs
src/adapters/http/: mod.rs  routes.rs  state.rs  ws.rs
src/adapters/onnx/: mod.rs  model_catalog.rs  pipeline.rs  yolo_engine.rs
src/adapters/v4l2/: camera_repo.rs  capture.rs  control_repo.rs  mod.rs
src/application/: dto.rs  mod.rs  ports.rs  services.rs  speech_service.rs
src/domain/: camera.rs  detection.rs  errors.rs  mod.rs  model.rs  stream.rs
static/: app.js  index.html  style.css
