[package]
name = "yolo_backend_hex"
version = "0.1.0"
edition = "2021"

[features]
# Por defecto evitamos CUDA para que compile en más entornos.
# El backend descarga binarios de ONNX Runtime automáticamente.
default = ["ort-download-binaries"]

# Descarga automática de binarios ONNX Runtime vía `ort`.
ort-download-binaries = ["ort/download-binaries", "ort/copy-dylibs", "ort/tls-native"]

# Habilitar CUDA (requiere toolchain/librerías CUDA en el host)
# Uso: cargo run --features cuda
cuda = ["ort/cuda"]

[dependencies]
anyhow = "1"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
axum = { version = "0.7", features = ["json", "ws"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bytes = "1"
base64 = "0.22"

image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
ndarray = "0.15"

v4l = "0.14"
# CUDA no se activa por defecto; se habilita con --features cuda.
# download-binaries/copy-dylibs se habilitan con la feature ort-download-binaries.
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray", "tracing"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }